# shape

./: .gitignore  .travis.yml  CMakeLists.txt  Deployment.md  README.md  README__old.md  bcfgLin.json  bcfgSchema.json  bcfgWin.json  bcfgWin64.json  build.py  build32.bat  build64.bat  build64_2017.bat  build64_2022.bat  buildEclipse.sh  buildMake.sh  buildMakeRel.sh  build_2017.bat  build_old.py  shape.py  shapeConfig.cmake.in
ComponentTemplate/: CMakeLists.txt  ComponentTemplate.cpp  ComponentTemplate.h
GTestRunner/: CMakeLists.txt  GTestRunner.cpp  GTestRunner.h
GTestStaticRunner/: CMakeLists.txt  GTestStaticRunner.cpp
TraceFileService/: CMakeLists.txt  TraceFileService.cpp  TraceFileService.h
TraceFormatService/: CMakeLists.txt  TraceFormatService.cpp  TraceFormatService.h
TraceSyslogService/: CMakeLists.txt  TraceSyslogService.cpp  TraceSyslogService.h
cmake/: Component.hxx.in  FindGoogleTest.cmake  ShapeComponentDeclaration.cmake  StartUp.in  project.vcxproj.user.in
docs/: README.md  index.html  scribbler.js
examples/Example1_Thread/: CMakeLists.txt  Example1_Thread.cpp  Example1_Thread.h
include/: Args.h  EnumStringConvertor.h  GTestStaticRunner.h  IConfiguration.h  IConfigurationService.h  ILaunchService.h  ITemplateService.h  ITraceFormatService.h  ITraceService.h  ShapeComponent.h  ShapeComponentMacros.h  ShapeDefines.h  ShapeProperties.h  ShapePropertiesJson.h  ShapePropertiesMacros.h  Shaper.h  StaticComponentMap.h  StaticTracer.h  TimeString.h  Trace.h  TraceHex.h  TraceLevel.h  TraceMacros.h
include/rapidjson/: prettywriter.h
launcher/: CMakeLists.txt  Component.cpp  Component.h  ComponentInstance.cpp  ComponentInstance.h  ComponentManager.cpp  ComponentManager.h  Configuration.cpp  Configuration.h  ConfigurationManager.cpp  ConfigurationManager.h  ConfigurationService.cpp  ConfigurationService.h  IConfiguration.h  IConfigurationManager.h  LauncherService.cpp  LauncherService.h  LibLoader.cpp  LibLoader.h  ProvidedInterface.cpp  ProvidedInterface.h  RequiredInterface.cpp  RequiredInterface.h  ShapePropertiesJson.h  Shaper.cpp  SignalHandler.h  StaticComponents.h
launcher/rapidjson/: document.h  encodedstream.h  encodings.h  reader.h  writer.h
launcher/rapidjson/internal/: meta.h
startup/: CMakeLists.txt  main.cpp
startup/configuration/: config.json  configRelease.json  shape__ComponentTemplate-Instance1.json  shape__Example1_Thread.json  shape__TraceFileService-ATest.json  shape__TraceFileService-CommonTrace.json  shape__TraceFileService-MyTrace.json  shape__TraceFormatService-Standard.json
